fix font weights and mobile text align

--- a/challenges/week-5/styles.css
+++ b/challenges/week-5/styles.css
@@ -34,11 +34,13 @@ body,html {
 .left-side .large-text {
     font-size: 48px;
     line-height: 55px;
+    font-weight: 500;
 }
 
 .left-side .small-text {
     font-size: 16px;
     line-height: 27px;
+    font-weight: 300;
 }
 
 .right-side {
@@ -72,12 +74,14 @@ body,html {
     font-size: 25px;
     line-height: 38px;
     margin: 0;
+    font-weight: 500;
 }
 
 .right-side .hover-text-small {
     font-size: 16px;
     line-height: 27px;
     margin: 0;
+    font-weight: 300;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -109,8 +113,7 @@ body,html {
     .left-side {
         height: 300px;
         margin: auto;
-        margin-left: 30px;
-
+        margin-left: 0;
     }
     .right-side {
         min-height: 500px;
